20807 (#140)
-Added illegal classes to checkstyle config.
-Moved checkstyle config to dina-base-api/src/main/resources so it's included in the jar.
-Removed usages of the illegal classes.